--- a/CSS/principalCSS.css
+++ b/CSS/principalCSS.css
@@ -12,7 +12,7 @@ body{
 
 @font-face {
     font-family: 'night_machine';
-    src: url(../Fuentes_Letras/night_machine/Night\ Machine.otf) format('truetype');
+    src: url(../Fuentes_Letras/Night\ Machine.otf) format('truetype');
 }
 
 @font-face {
