--- a/CSS/principalCSS.css
+++ b/CSS/principalCSS.css
@@ -342,13 +342,13 @@ ul{
 #imagencochevista{
     border: 2px solid red;
     border-radius: 20px;
-    box-shadow: 5px 5px 10px violet;
+    box-shadow: 5px 5px 10px rgb(174, 0, 255);
     width: 700px;
     height: 350px;
 }
 
 #contenidoExtra{
-    background-color: springgreen;
+    background-color: rgb(0, 0, 0);
     border-radius: 20px;
 }
 
@@ -379,11 +379,11 @@ ul{
     height: 150px;
     border-radius: 20px;
     border: 2px solid rgb(158, 182, 177);
-    box-shadow: 5px 5px 10px rgb(211, 12, 211);
+    box-shadow: 5px 5px 10px rgb(255, 0, 0);
 }
 
 #img-y_texto h3{
-    color: darkgoldenrod;
+    color: rgba(223, 208, 0, 0.801);
     margin: 5px;
     padding: 5px;
 }
@@ -410,7 +410,7 @@ ul{
 
 #footer{
     margin-top: 15px;
-    background-color: darkgrey;
+    background-color: rgb(176, 255, 255);
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
