--- a/CSS/principalCSS.css
+++ b/CSS/principalCSS.css
@@ -57,12 +57,12 @@ body{
 
 @font-face {
     font-family: 'night_machine';
-    src: url(../Fuentes_Letras/Night\ Machine.otf) format('truetype');
+    src: url(../Recursos/Fonts/Night\ Machine.otf) format('truetype');
 }
 
 @font-face {
     font-family: 'WrathStyles';
-    src: url(../Fuentes_Letras/anger_styles/WrathStyles.ttf) format('truetype');
+    src: url(../Recursos/Fonts/anger_styles/AngerStyles.ttf) format('truetype');
 }
 
 h1{
